--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,16 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+/* ./src/index.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer components {
+   .btn-indigo {
+    @apply py-1 px-1 bg-white text-black hover:text-white font-light rounded-md shadow-md hover:bg-indigo-700 focus:outline-none;
+  }
+  .industries-text {
+    @apply p-1 border mr-2 border-black rounded shadow-md bg-white mt-4 pl-3 pr-3;
+  }
+  .affiliations-titles {
+    @apply  border-r  border-black  bg-white pr-4 pl-4;
+  }
 }
